[package]
name = "ccc-solver"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
description = "A simple and minimalistic Cloudflight Coding Contest rust solver"
repository = "https://github.com/adrior11/ccc-solver"
readme = "README.md"
keywords = ["cloudflight", "solver", "contest"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
